--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "ws-server",
+  "name": "http-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "devDependencies": {
     "@repo/db":"workspace:*",
     "@repo/typescript-config":"workspace:*"
