--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-server",
+  "name": "ws-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "@types/ws": "^8.18.1",
+    "ws": "^8.18.3"
   }
 }
